crates/ink/tests/ui/event/fail/name-override-invalid-01.rs
#[ink::event(name = "1MyEvent")]
pub struct Event {
    #[ink(topic)]
    pub topic: [u8; 32],
    pub field_1: u32,
}

fn main() {}
