crates/ink/tests/ui/event/fail/name-override-invalid-01.stderr
error: `name` attribute argument value must begin with an alphabetic character, underscore or dollar sign
 --> tests/ui/event/fail/name-override-invalid-01.rs:1:21
  |
1 | #[ink::event(name = "1MyEvent")]
  |                     ^^^^^^^^^^
